--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ body {
   padding: 0 30px 0 30px;
 }
 
+header{
+  height: 100px;
+  border-bottom: 1px solid #cccccc;
+}
+
 header nav ul li{
   display: inline;
 }
