--- a/style.css
+++ b/style.css
@@ -15,10 +15,18 @@ header nav{
   float: right;
 }
 
+header nav ul{
+  padding: 0;
+  margin: 40px 0 0 0;
+  
+}
+
 header nav ul li{
   display: inline;
   margin-right: 10px;
 }
+
+
 
 h3#header{
   float: left;
