--- a/style.css
+++ b/style.css
@@ -18,12 +18,19 @@ header nav{
 header nav ul{
   padding: 0;
   margin: 40px 0 0 0;
-  
+
 }
 
 header nav ul li{
   display: inline;
   margin-right: 10px;
+}
+
+header nav a{
+  text-decoration: none;
+  color: #007bff;
+  font-size: 18px;
+  
 }
 
 
