automatically backed up by learn

--- a/style.css
+++ b/style.css
@@ -30,12 +30,13 @@ header nav a{
   text-decoration: none;
   color: #007bff;
   font-size: 18px;
-  
+
 }
 
 
 
-h3#header{
+header h3{
   float: left;
+  font-size: 30px;
 
 }
